--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 </head>
 
 <body>
-    <div>
-        <div class="card">
-            <h2 class="card-header">Payment form</h2>
+    <div class="container p-0 w-75 border">
+        <div class="bg-light w-100 border">
+            <h2 class="card-header m-2">Payment form</h2>
         </div>
-        <div class="card-body">
-            <div class="error_message"> Some fields are missing</div>
+        <div class="card-body p-3">
+            <div class="alert alert-danger" role="alert">
+                Some fields are missing
+              </div>
             <form class="row g-3 needs-validation" novalidate>
                 <div class="col-md-4 position-relative">
                     <label for="validationTooltip01" class="form-label">Card #</label>
@@ -72,18 +74,16 @@
                             <option selected disabled value="">Pick a state</option>
                             <option>...</option>
                         </select>
-                        <div class="invalid-tooltip">
-                            
+                        <div class="invalid-tooltip">                          
                         </div>
                     </div>
                     <div class="col-md-3 position-relative">
                         <label for="validationTooltip05" class="form-label">Zip</label>
                         <input type="text" class="form-control" id="validationTooltip05" required>
                     </div>
-                </div>
             </form>
             <form class="row g-3  needs-validation" novalidate>
-                <div class="col-md-6 position-relative">
+                <div class="col-md-8 position-relative">
                     <label for="validationTooltip03" class="form-label">We Accept :</label>
                     <br>
                     <div class="btn btn-secondary col">
@@ -99,22 +99,22 @@
                     <div class="invalid-tooltip">
                     </div>
                 </div>
-                <div class="col-md-3 position-relative">
+                <div class="col-md-4 position-relative">
                     <div class="mb-3">
                         <label for="validationTextarea" class="form-label">Message</label>
-                        <textarea cols="60" rows="3" id="validationTextarea"></textarea>
+                        <textarea class="w-100" cols="60" rows="3" id="validationTextarea"></textarea>
                         <small id="help" class="form-text text-muted">Add my notes here</small>
                     </div>
                 </div>
+            </form>
             </div>
-            <div class="card-footer text-right float-end">
-                <button type="button" class="btn btn-secondary" id="cancel">Cancel</button>
+        </div>
+            <div class="bg-light d-flex justify-content-end p-3 border">
+                <button type="button" class="btn btn-secondary me-1" id="cancel">Cancel</button>
                 <button class="btn btn-primary" type="submit">Send</button>
             </div>
-    </div>
-    </div>
+    <!-- </div> -->
 </div>
-</form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
