header message changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container p-0 w-75 border">
         <div class="bg-light w-100 border">
-            <h2 class="card-header m-2">Payment form</h2>
+            <h2 class="card-header m-2">Payment form example</h2>
         </div>
         <div class="card-body p-3">
             <div class="alert alert-danger" role="alert">
